// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Rubik-Medium",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      MockedText
    </Text>
  </View>
</View>
`;

exports[`renders correctly when disabled 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "opacity": 0.5,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "Rubik-Medium",
            "fontSize": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      MockedText
    </Text>
  </View>
</View>
`;
